--- a/src/component/Home/Home.css
+++ b/src/component/Home/Home.css
@@ -4,6 +4,9 @@ h3{
     margin:0;
     padding-top:150px!important;
     font-weight: bold!important;
-    color: rgb(68, 253, 108)!important;
+    color: rgb(233, 62, 19)!important;
 }
 
+/* .image{
+    height: 575px;
+} */
