--- a/src/component/Home/Home.css
+++ b/src/component/Home/Home.css
@@ -4,7 +4,7 @@ h3{
     margin:0;
     padding-top:150px!important;
     font-weight: bold!important;
-    color: rgb(233, 62, 19)!important;
+    color: red!important;
 }
 
 /* .image{
